# serializer version: 1
# name: test_command_docs_appear_in_help
  '''
                                                                                  
   Usage: demo cmd_with_docs [OPTIONS]                                            
                                                                                  
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Usage notes ----------------------------------------------------------------+
  | Only usable on **Tuesdays**.                                                 |
  +------------------------------------------------------------------------------+
  +- Examples -------------------------------------------------------------------+
  | Run the command.                                                             |
  | snow demo cmd_with_docs                                                      |
  | Output: done                                                                 |
  |                                                                              |
  | snow demo cmd_with_docs --again                                              |
  +------------------------------------------------------------------------------+
  +- Related topics -------------------------------------------------------------+
  | • https://docs.snowflake.com/en/developer-guide/snowflake-cli/index          |
  | • Snowflake CLI command reference                                            |
  |   https://docs.snowflake.com/en/developer-guide/snowflake-cli/               |
  |   command-reference/overview                                                 |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_command_with_connection_options
  '''
                                                                                  
   Usage: snow cmd_with_connection_options [OPTIONS] NAME [global options]        
   [connection options]                                                           
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [required]                                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Global and connection options ----------------------------------------------+
  | Connection options: --connection, --host, --port, --protocol, --account,     |
  | --user, --password, --authenticator, --workload-identity-provider,           |
  | --private-key-file, --token, --token-file-path, --database, --schema,        |
  | --role, --warehouse, --temporary-connection, --mfa-passcode, --enable-diag,  |
  | --diag-log-path, --diag-allowlist-path, --oauth-client-id,                   |
  | --oauth-client-secret, --oauth-authorization-url, --oauth-token-request-url, |
  | --oauth-redirect-uri, --oauth-scope, --oauth-disable-pkce,                   |
  | --oauth-enable-refresh-tokens, --oauth-enable-single-use-refresh-tokens,     |
  | --client-store-temporary-credential, --secondary-roles,                      |
  | --server-session-keep-alive                                                  |
  | Global options: --format, --verbose, --debug, --silent,                      |
  | --enhanced-exit-codes, --decimal-precision                                   |
  |                                                                              |
  | Run `snow --help` for full descriptions, or use `--help-all` on this         |
  | command.                                                                     |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_command_with_global_options
  '''
                                                                                  
   Usage: snow cmd_with_global_options [OPTIONS] NAME [global options]            
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [required]                                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Global options -------------------------------------------------------------+
  | Global options: --format, --verbose, --debug, --silent,                      |
  | --enhanced-exit-codes, --decimal-precision                                   |
  |                                                                              |
  | Run `snow --help` for full descriptions, or use `--help-all` on this         |
  | command.                                                                     |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_command_without_any_options
  '''
                                                                                  
   Usage: snow simple_cmd [OPTIONS] NAME                                          
                                                                                  
  +- Arguments ------------------------------------------------------------------+
  | *    name      TEXT  [required]                                              |
  +------------------------------------------------------------------------------+
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
# name: test_enabled_command_is_not_visible
  '''
  Usage: snow [OPTIONS] COMMAND [ARGS]...
  Try 'snow --help' for help.
  +- Error ----------------------------------------------------------------------+
  | No such command 'switchable_cmd'.                                            |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_enabled_command_is_visible
  '''
                                                                                  
   Usage: snow switchable_cmd [OPTIONS] [global options]                          
                                                                                  
  +- Options --------------------------------------------------------------------+
  | --help  -h        Show this message and exit.                                |
  +------------------------------------------------------------------------------+
  +- Global options -------------------------------------------------------------+
  | Global options: --format, --verbose, --debug, --silent,                      |
  | --enhanced-exit-codes, --decimal-precision                                   |
  |                                                                              |
  | Run `snow --help` for full descriptions, or use `--help-all` on this         |
  | command.                                                                     |
  +------------------------------------------------------------------------------+
  
  
  '''
# ---
